--- a/src/feedback_frontend/nginx.conf
+++ b/src/feedback_frontend/nginx.conf
@@ -10,7 +10,7 @@ server {
 
     # Proxy API requests to backend
     location /api/ {
-        proxy_pass http://backend-service:5000;  # Forward requests to backend-service
+        proxy_pass http://backend:5000;  # Forward requests to backend-service
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
     }
