--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,18 +1,21 @@
-# Feedback application
+# pipelines started 
+
 
 trigger:
-    branches:
-      include:
-        - main
+
+  branches:
+  
+    include:
+
+      - main
 
 pool:
-    name: iti-self-hosted
+  name: iti-self-hosted
 
 variables:
-    dockerHubNamespace: 'ahmedhedihed'
-    dockerRegistryServiceConnection: 'dockerhub-service-conn'
-    buildId: $(Build.BuildId)
-
+  DockerHub: "emanshehta99"          
+  dockerRegistryServiceConnection: "docker-serv-conn"
+    
 parameters:
   - name: environment
     type: string
@@ -23,76 +26,75 @@ parameters:
       - prod
 
 stages:
+  - stage: CI 
+    displayName: CI stage
+    jobs:
+      - job: lint
+        displayName: linting backend
+        steps:
+        - checkout: self
+        - task: UsePythonVersion@0
+          inputs:
+              versionSpec: '3.9'
+              addToPath: true
+        - script: |
+                python3.9 -m venv .venv
+                source .venv/bin/activate
+                pip install flake8
+                flake8 src/feedback_backend/app.py
+          displayName: 'Run_Linting'
 
-- stage: CI
-  displayName: CI stage
-  jobs:
-  - job: Lint
-    displayName: Linting Backend
-    steps:
-    - checkout: self
-    - task: UsePythonVersion@0
-      inputs:
-        versionSpec: '3.9'
-        addToPath: true
-    - script: |
-        python3.9 -m venv .venv
-        source .venv/bin/activate
-        pip install flake8
-        flake8 src/feedback_backend/app.py
-      displayName: 'Run Linting'
 
-  - job: Test
-    dependsOn: Lint
-    displayName: Unit Test Backend
-    steps:
-    - checkout: self
-    - script: |
-        python3.9 -m venv .venv
-        source .venv/bin/activate
-        pip install -r src/feedback_backend/requirements.txt
-        pip install pytest
-        pytest
-      displayName: 'Run Unit Test'
-      workingDirectory: $(Build.SourcesDirectory)
+      - job: unittest
+        dependsOn: lint 
+        displayName: unit test backend
+        
+        steps:
+        - checkout: self
+        - script: |
+                python3.9 -m venv .venv
+                source .venv/bin/activate
+                pip install -r src/feedback_backend/requirements.txt
+                pip install pytest
+          displayName: 'Run unit test'
+          workingDirectory: $(Build.SourcesDirectory)
 
-  - job: Build
-    dependsOn: [Lint, Test]
-    displayName: Build and Push
-    steps:
-    - checkout: self
-    
-    - task: Docker@2
-      displayName: Build and Push Backend Image
-      inputs:
-        containerRegistry: $(dockerRegistryServiceConnection)
-        repository: $(dockerHubNamespace)/feedback-backend
-        command: 'buildAndPush'
-        Dockerfile: 'src/feedback_backend/Dockerfile'
-        tags: $(Build.BuildId)
-        buildContext: '$(Build.SourcesDirectory)/src/feedback_backend'
-
-    - task: Docker@2
-      displayName: Build and Push Frontend Image
-      inputs:
-        containerRegistry: $(dockerRegistryServiceConnection)
-        repository: $(dockerHubNamespace)/feedback-frontend
-        command: 'buildAndPush'
-        Dockerfile: 'src/feedback_frontend/Dockerfile'
-        tags: $(Build.BuildId)
-        buildContext: '$(Build.SourcesDirectory)/src/feedback_frontend'
-
-- stage: CD
-  displayName: CD stage
-  dependsOn: CI
-  jobs:
-  - deployment: DeployToEKS
-    displayName: Deploy to EKS
-    environment: ${{ parameters.environment }}
-    strategy:
-        runOnce:
+      - job: build
+        dependsOn: [lint, unittest] 
+        displayName: build and push 
+        steps:
+        - checkout: self
+        - task: Docker@2
+          displayName: build and push backend image
+          inputs:
+            containerRegistry: $(dockerRegistryServiceConnection)
+            repository: $(DockerHub)/feedback-backend
+            command: buildAndPush
+            Dockerfile: 'src/feedback_backend/Dockerfile'
+            tags: $(Build.BuildId)
+            buildContext: '$(Build.SourcesDirectory)/src/feedback_backend'
+        - task: Docker@2
+          displayName: build and push frontend image
+          inputs:
+            containerRegistry: $(dockerRegistryServiceConnection)
+            repository: $(DockerHub)/feedback-frontend
+            command: buildAndPush
+            Dockerfile: 'src/feedback_frontend/Dockerfile'
+            tags: $(Build.BuildId)
+            buildContext: '$(Build.SourcesDirectory)/src/feedback_frontend'
+          
+          
+  - stage: CD
+    displayName: CD stage
+    dependsOn: CI
+    jobs:
+      - deployment: deploy_to_eks
+        displayName: deploy to eks
+        environment: ${{ parameters.environment }}
+        strategy:
+          runOnce:
             deploy:
-                steps:
+              steps:
                 - checkout: self
                 - task: ReplaceTokens@5
                   inputs:
@@ -107,15 +109,15 @@ stages:
                 - task: AWSShellScript@1
                   displayName: 'Login to EKS Cluster'
                   inputs:
-                    awsCredentials: 'aws-eks-service-connection'   # replace with your real connection name
-                    regionName: 'us-east-1'
+                    awsCredentials: 'aws-svc-con'   
+                    regionName: 'eu-north-1'
                     scriptType: 'inline'
                     inlineScript: |
                       echo "Logging in to EKS cluster"
                       aws eks update-kubeconfig \
-                        --region us-east-1 \
+                        --region eu-north-1 \
                         --name eks-stagging-cluster
 
                 - script: |
                     kubectl apply -f $(Build.SourcesDirectory)/k8s/ -n ${{ parameters.environment }}
-                  displayName: 'Deploy to EKS with kubectl'
+                  displayName: 'Deploy to EKS with kubectl'        
